force-app/main/default/objects/Lead/fields/Tertiary_Source__c.field-meta.xml
<CustomField>
    <fullName>Tertiary_Source__c</fullName>
    <description>Specifies the source through which the Applicant landed for the third time</description>
    <inlineHelpText>Third-time Source of the Applicant</inlineHelpText>
    <label>Tertiary Source</label>
    <length>80</length>
    <type>Text</type>
</CustomField>