force-app/main/default/objects/Lead/fields/utm_campaign__c.field-meta.xml
<CustomField>
    <fullName>utm_campaign__c</fullName>
    <inlineHelpText>Capture the UTM Campaign from the URL Parameter.</inlineHelpText>
    <label>UTM Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>