force-app/main/default/objects/Lead/fields/utm_content__c.field-meta.xml
<CustomField>
    <fullName>utm_content__c</fullName>
    <inlineHelpText>Capture the UTM Content from the URL Parameter.</inlineHelpText>
    <label>UTM Content</label>
    <length>255</length>
    <type>Text</type>
</CustomField>