force-app/main/default/objects/Lead/fields/utm_medium__c.field-meta.xml
<CustomField>
    <fullName>utm_medium__c</fullName>
    <inlineHelpText>Capture the UTM Medium from URL Parameter.</inlineHelpText>
    <label>UTM Medium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>