force-app/main/default/objects/Lead/fields/utm_source__c.field-meta.xml
<CustomField>
    <fullName>utm_source__c</fullName>
    <inlineHelpText>Capture the UTM Source from the URL Parameter.</inlineHelpText>
    <label>UTM Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>