force-app/main/default/objects/Lead/fields/utm_term__c.field-meta.xml
<CustomField>
    <fullName>utm_term__c</fullName>
    <inlineHelpText>Capture the UTM Term from the URL Parameter.</inlineHelpText>
    <label>UTM Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>