force-app/main/default/objects/Lead/fields/Visual_Status__c.field-meta.xml
<CustomField>
    <fullName>Visual_Status__c</fullName>
    <formula>CASE( Disposition__c , &quot;Not Eligible&quot;, IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;red&quot;, 30, 30), &quot;Course Closed&quot;, IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;red&quot;, 30, 30), &quot;Invalid&quot;, IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;red&quot;, 30, 30), &quot;No Response&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0155j000002LLoY&quot;, &quot;orange&quot;, 30, 30), &quot;Cold&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0155j000002LLoY&quot;, &quot;orange&quot;, 30, 30), &quot;Filled Application with Other Credentials&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0155j000002LLoZ&quot;, &quot;royal blue&quot;, 30, 30), &quot;Not Interested&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file= 0155j000002LLoY&quot;, &quot;orange&quot;, 30, 30), &quot;Hot&quot;,IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;yellow&quot;, 30, 30), &quot;Warm&quot;,IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;yellow&quot;, 30, 30), &quot;Enrolled&quot;,IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 30, 30), IMAGE(&quot;/servlet/servlet.FileDownload?file=0155j000002LLoa&quot;, &quot;white&quot;, 30, 30))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Visual Status</label>
    <type>Text</type>
</CustomField>