force-app/main/default/objects/Lead/fields/whatsAppGroup__c.field-meta.xml
<CustomField>
    <fullName>whatsAppGroup__c</fullName>
    <label>whatsAppGroup</label>
    <length>10</length>
    <type>Text</type>
</CustomField>