force-app/main/default/objects/Lead/validationRules/Counselors_cant_edit_few_Lead_fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Counselors_cant_edit_few_Lead_fields</fullName>
    <active>true</active>
    <description>Fields: Lead Status, Email and Mobile should not be editable by the Counselors</description>
    <errorConditionFormula>(ISCHANGED(Status)
|| ISCHANGED(Email)
|| ISCHANGED(MobilePhone)
|| ISCHANGED(Country_Code__c)
)&amp;&amp;
($Profile.Name = &apos;Counselor&apos;)</errorConditionFormula>
    <errorMessage>You don&apos;t have access to edit the Lead Status, Email and Mobile fields. Please contact Admissions Team.</errorMessage>
</ValidationRule>