force-app/main/default/objects/Lead/validationRules/Indian_Mobile_should_be_10_digits.validationRule-meta.xml
<ValidationRule>
    <fullName>Indian_Mobile_should_be_10_digits</fullName>
    <active>false</active>
    <description>Mobile number cannot be greater or lesser than 10 digits</description>
    <errorConditionFormula>IF(  TEXT(Country_Code__c)  = &quot;India (+91)&quot;, LEN( MobilePhone) &lt;&gt;10, NULL)</errorConditionFormula>
    <errorDisplayField>MobilePhone</errorDisplayField>
    <errorMessage>Mobile should be exactly 10 digits</errorMessage>
</ValidationRule>