force-app/main/default/objects/Lead/validationRules/Lead_Status_not_editable.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Status_not_editable</fullName>
    <active>false</active>
    <description>A lead status field should not be editable by a non-system admin profile.</description>
    <errorConditionFormula>((ISCHANGED(Status) &amp;&amp; NOT(ISPICKVAL(Status, &apos;Unqualified&apos;)) )
|| ISCHANGED(Email)
|| ISCHANGED(MobilePhone)
)
&amp;&amp; $Profile.Name = &apos;Counselor&apos;</errorConditionFormula>
    <errorMessage>You don&apos;t have access to edit the Status field. Please contact System Administrator.</errorMessage>
</ValidationRule>