force-app/main/default/objects/Lead/listViews/AllOpenLeads.listView-meta.xml
<ListView>
    <fullName>AllOpenLeads</fullName>
    <columns>Visual_Status__c</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>Primary_Source__c</columns>
    <columns>utm_source__c</columns>
    <columns>LEAD.MOBILE_PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>Disposition__c</columns>
    <columns>hed__Gender__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.STATE</columns>
    <columns>Category__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Open Leads</label>
    <sharedTo>
        <role>Admin_Role</role>
        <role>Admission_Executive</role>
        <role>Admissions</role>
        <role>Finance_Manager</role>
        <role>Registrar_Office</role>
    </sharedTo>
</ListView>