force-app/main/default/objects/Lead/listViews/My_Leads.listView-meta.xml
<ListView>
    <fullName>My_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.MOBILE_PHONE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>hed__Recruitment_Stage__c</columns>
    <columns>Visual_Status__c</columns>
    <columns>State__c</columns>
    <columns>Program_Name_Display__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Disposition__c</columns>
    <filterScope>Everything</filterScope>
    <label>My Leads</label>
    <sharedTo>
        <role>Counselor</role>
    </sharedTo>
</ListView>