force-app/main/default/objects/Lead/listViews/My_Leads_Unverified.listView-meta.xml
<ListView>
    <fullName>My_Leads_Unverified</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.MOBILE_PHONE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Disposition__c</columns>
    <columns>Visual_Status__c</columns>
    <columns>Applicant_Score__c</columns>
    <columns>Category__c</columns>
    <columns>Country__c</columns>
    <columns>State__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Unverified</value>
    </filters>
    <label>My Leads-Unverified</label>
    <sharedTo>
        <role>Counselor</role>
    </sharedTo>
</ListView>