force-app/main/default/objects/Lead/listViews/My_Leads_Verified.listView-meta.xml
<ListView>
    <fullName>My_Leads_Verified</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.MOBILE_PHONE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Disposition__c</columns>
    <columns>Visual_Status__c</columns>
    <columns>Applicant_Score__c</columns>
    <columns>Category__c</columns>
    <columns>Country__c</columns>
    <columns>State__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Verified</value>
    </filters>
    <label>My Leads-Verified</label>
    <sharedTo>
        <role>Counselor</role>
    </sharedTo>
</ListView>