force-app/main/default/objects/Lead/listViews/My_Warm_Leads.listView-meta.xml
<ListView>
    <fullName>My_Warm_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.MOBILE_PHONE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Applicant_Score__c</columns>
    <columns>Category__c</columns>
    <columns>Country__c</columns>
    <columns>State__c</columns>
    <columns>Visual_Status__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Disposition__c</field>
        <operation>equals</operation>
        <value>Warm</value>
    </filters>
    <label>My Warm Leads</label>
    <sharedTo>
        <role>Counselor</role>
    </sharedTo>
</ListView>