force-app/main/default/objects/Lead/listViews/TodaysLeads.listView-meta.xml
<ListView>
    <fullName>TodaysLeads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>utm_source__c</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>Primary_Source__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>Program_Name_Display__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today&apos;s Leads</label>
    <sharedTo>
        <group>Admission_Admin_Team</group>
        <role>Admission_Executive</role>
    </sharedTo>
</ListView>