force-app/main/default/objects/Lead/listViews/Unverified_Leads.listView-meta.xml
<ListView>
    <fullName>Unverified_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.MOBILE_PHONE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Disposition__c</columns>
    <columns>Visual_Status__c</columns>
    <columns>Applicant_Score__c</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>Country__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Unverified</value>
    </filters>
    <filters>
        <field>Owner_Name__c</field>
        <operation>contains</operation>
        <value>sudhakar</value>
    </filters>
    <label>Unverified Leads</label>
    <sharedTo>
        <group>Admission_Admin_Team</group>
        <role>Admission_Executive</role>
        <role>Admissions</role>
        <role>Finance_Manager</role>
    </sharedTo>
</ListView>